# django_project

./: Pipfile  docker-compose.yml  dockerfile  pyproject.toml
mysite/: dockerfile  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/: admin.py  forms.py  serializers.py  urls.py  views.py
mysite/shopapp/templates/shopapp/: user_orders_list.html
