[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "My Python project"
authors = ["vladlen dazhboggg@mail.ru"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"